Closed Bug 398045 Opened 17 years ago Closed 17 years ago

evalcx needs JS_BeginRequest

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: igor, Assigned: igor)

References

Details

Attachments

(1 file)

js1_5/extensions/regress-394967.js asserts when run under js shell compiled with JS_THREADSAFE as evalcx implementation lacks JS_BeginRequest:

~/m/trunk/mozilla/js/tests $ ./../src/Linux_All_DBG.OBJ/js  -f ./shell.js -f ./js1_5/shell.js -f ./js1_5/extensions/shell.js -f ./js1_5/extensions/regress-394967.js -f ./js-test-driver-end.js
BUGNUMBER: 394967
STATUS: Do not assert: !JSVAL_IS_PRIMITIVE(vp[1])
Assertion failure: (cx)->requestDepth || (cx)->thread == (cx)->runtime->gcThread, at jsapi.c:2898
trace/breakpoint trap
Blocks: 396452
Attached patch fix v1Splinter Review
The patch adds JS_BeginRequest/JS_EndRequest for the new context.
Attachment #282880 - Flags: review?(mrbkap)
Attachment #282880 - Flags: review?(mrbkap) → review+
I checked in the patch from comment 1 to the CVS trunk:

http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&branch=HEAD&cvsroot=%2Fcvsroot&date=explicit&mindate=1191168588&maxdate=1191168721&who=igor%mir2.org
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
verified fixed 1.9.0
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: