evalcx uses JS_BeginRequest/JS_EndRequest. bug 398045, r=mrbkap, not a part of the build.